# wappregator

./: .containerignore  AGENTS.md  Containerfile  LICENSE  README.md  backend.Dockerfile  backend.Dockerfile.dockerignore  biome.jsonc  compose.prod.yml  compose.yml  pollers.Dockerfile  pyproject.toml
.github/workflows/: docker-backend.yml  docker-frontend.yml  docker-pollers.yml  docker.yml  tofu-apply.yml  tofu-lint.yml  tofu-plan.yml
backend/: AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml
backend/src/wappregator/: app.py  model.py  socket.py  utils.py
backend/src/wappregator/radios/: __init__.py  base.py  diodi.py  jkl.py  mock.py  norppa.py  poller.py  rakkauden.py  ratto.py  sateily.json  sateily.py  somafm.py  turun.py  utils.py  wapina.py
backend/src/wappregator/templates/: nowplaying.html
common/: README.md  pyproject.toml
common/src/wapprecommon/: constants.py  dev_radios.py  internal_model.py  keys.py  listeners.py  model.py  radios.py  utils.py
frontend/: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  Caddyfile  Containerfile  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  calendarUtils.ts  common.module.css  funnySlogansHaha.ts  getProgramProgress.tsx  icsExport.ts  index.tsx  main.css  programKey.ts  radio.tsx  state.ts  state.tsx  timeUtils.ts  types.ts  useSelectedProgram.ts
frontend/src/nowplaying/: AudioPlayer.tsx  Channel.module.css  Channel.tsx  Channels.module.css  Channels.tsx  NowPlayingHeader.tsx  NowPlayingRow.tsx  NowPlayingTable.module.css  NowPlayingTable.tsx  PlayButton.module.css  PlayButton.tsx  PlayerBar.module.css  PlayerBar.tsx  Program.module.css  Program.tsx
frontend/src/views/: App.module.css  App.tsx  layoutState.tsx
frontend/src/views/channels/: Channel.module.css  Channel.tsx  Channels.module.css  Channels.tsx  Program.module.css  Program.tsx
frontend/src/views/common/: PlayButton.module.css  PlayButton.tsx  ProgressBar.module.css  ProgressBar.tsx  Ticker.module.css  Ticker.tsx  brandUtils.ts  common.module.css
frontend/src/views/confetti/: Confetti.tsx
frontend/src/views/countdown/: Countdown.module.css  Countdown.tsx
frontend/src/views/description/: Description.module.css  Description.tsx  InfoGrid.module.css  InfoGrid.tsx  ProgramHeader.module.css  ProgramHeader.tsx
frontend/src/views/guide/: Guide.module.css  Guide.tsx
frontend/src/views/old/: Old.module.css  Old.tsx  types.ts
frontend/src/views/old/nowplaying/: NowPlayingHeader.tsx  NowPlayingRow.module.css  NowPlayingRow.tsx  NowPlayingTable.tsx
frontend/src/views/player/: AudioPlayer.tsx  HlsAudioPlayer.tsx  PlayerBar.module.css  PlayerBar.tsx  VolumeSlide.tsx  audioPlayerCommon.ts  playerState.tsx
frontend/src/views/programModal/: InfoGrid.tsx  ProgramHeader.module.css  ProgramHeader.tsx  ProgramModal.module.css  ProgramModal.tsx
frontend/src/views/radio/: Radio.tsx
frontend/src/views/search/: RadioFilter.tsx  Search.module.css  Search.tsx
frontend/src/views/settings/: Settings.module.css  Settings.tsx
pollers/: README.md  pyproject.toml
pollers/src/wapprepollers/: __main__.py  heartbeat.py  housekeeping.py  streams.py  utils.py
pollers/src/wapprepollers/pollers/: base.py  diodi.py  rakkauden.py  ratto.py  somafm.py  turun.py
src/wappregator/: app.py  model.py
src/wappregator/radios/: __init__.py  base.py  diodi.py  norppa.py  rakkauden.py  turun.py  wapina.py
tofu/: .env.example  .gitignore  .terraform.lock.hcl  README.md  dns.tf  k8s-apps.tf  k8s-ingress.tf  k8s.tf  main.tf  outputs.tf  upcloud.tf  variables.tf
