[project]
name = "wapprecommon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julius Laitala", email = "julius.laitala@brightlyworks.com" },
]
requires-python = ">=3.13"
dependencies = ["pydantic>=2.12.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.19.1"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # Pycodestyle errors
    "W",   # Pycodestyle warnings
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "RUF", # Ruff-specifics
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "D413", # Missing blank line after last section
]

[tool.mypy]
disallow_untyped_defs = true
